force-app/main/default/objects/Entitlement_Use__c/Entitlement_Use__c.object-meta.xml
<CustomObject>
    <description>&quot;SOX object - The end consumer of an entitlement. The end user could be a contact or a cluster or both.
Primarirly used by manaufacturing team.&quot;</description>
    <label>Entitlement Use</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entitlement Uses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>