force-app/main/default/objects/Entitlement_Use__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Entitlement Uses</relationshipLabel>
    <relationshipName>Entitlement_Uses</relationshipName>
    <type>Lookup</type>
</CustomField>