force-app/main/default/objects/Entitlement_Use__c/fields/activation_date__c.field-meta.xml
<CustomField>
    <fullName>activation_date__c</fullName>
    <description>Activation Date</description>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>