force-app/main/default/objects/Entitlement_Use__c/fields/actual_usage__c.field-meta.xml
<CustomField>
    <fullName>actual_usage__c</fullName>
    <description>Actual Usage</description>
    <label>Actual Usage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>