force-app/main/default/objects/Entitlement_Use__c/fields/archived__c.field-meta.xml
<CustomField>
    <fullName>archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is archived</description>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>