force-app/main/default/objects/Entitlement_Use__c/fields/cluster__c.field-meta.xml
<CustomField>
    <fullName>cluster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cluster on which this entitlement is activated / consumed / used / bound.</description>
    <label>Cluster</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>Entitlement Uses</relationshipLabel>
    <relationshipName>Entitlement_Uses</relationshipName>
    <type>Lookup</type>
</CustomField>