force-app/main/default/objects/Entitlement_Use__c/fields/contact__c.field-meta.xml
<CustomField>
    <fullName>contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>contact id</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Entitlement Uses</relationshipLabel>
    <relationshipName>Entitlement_Uses</relationshipName>
    <type>Lookup</type>
</CustomField>