force-app/main/default/objects/Entitlement_Use__c/fields/entitlement__c.field-meta.xml
<CustomField>
    <fullName>entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Entitlement ID</description>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Entitlement Uses</relationshipLabel>
    <relationshipName>Entitlement_Uses</relationshipName>
    <type>Lookup</type>
</CustomField>