force-app/main/default/objects/Entitlement_Use__c/fields/node__c.field-meta.xml
<CustomField>
    <fullName>node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Node</label>
    <referenceTo>Node__c</referenceTo>
    <relationshipLabel>Entitlement Uses</relationshipLabel>
    <relationshipName>Entitlement_Uses</relationshipName>
    <type>Lookup</type>
</CustomField>