force-app/main/default/objects/Entitlement_Use__c/fields/notes__c.field-meta.xml
<CustomField>
    <fullName>notes__c</fullName>
    <description>General Notes</description>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>