force-app/main/default/objects/Entitlement_Use__c/fields/serial_number__c.field-meta.xml
<CustomField>
    <fullName>serial_number__c</fullName>
    <label>Serial Number</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>