force-app/main/default/objects/Entitlement_Use__c/fields/usage_limit__c.field-meta.xml
<CustomField>
    <fullName>usage_limit__c</fullName>
    <description>Usage Limit (e.g. 50TB, 1000VM) -- Usually inferred  as the parent entitlement.</description>
    <label>Usage Limit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>